[package]
name = "keepass-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Yu-Fu Fu <yufu@yfu.tw>"]
description = "Alternative CLI for Keepass"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
keepass = "0.4.10"
log = "0.4.17"
rustyline = "10.0.0"
shadow-rs = "0.17.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
shadow-rs = "0.17.1"