[package]
name = "keepass-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Yu-Fu Fu <yufu@yfu.tw>"]
description = "Alternative CLI for KeePass with Emacs integration"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
atty = "0.2.14"
clap = { version = "4.0.26", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
keepass = { path = "../keepass-rs" }
lexpr = "0.2.6"
libreauth = "0.15.0"
log = "0.4.17"
rpassword = "7.1.0"
rustyline = "10.0.0"
shadow-rs = "0.17.1"
shellwords = "1.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"

[build-dependencies]
shadow-rs = "0.17.1"

[profile.dev]
# must specifiy this; otherwise decrypt xml takes forever
opt-level = 3
